----------------------------------------------------------------------
 OmegaT 2.1.9 update 1
----------------------------------------------------------------------
  0 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.1.9 update 1 vs. 2.1.9

 Bug fixes:

  - With some fonts, "squares" were displayed in the Editor around 
segment markers

  - When the files in /source were changed, it was sometime not possible
to reload the project

----------------------------------------------------------------------
 OmegaT 2.1.9
----------------------------------------------------------------------
  3 Enhancements
  4 Bugfixes
----------------------------------------------------------------------
2.1.9 vs. 2.1.8 update 1

  Other enhancements:

  - Swedish localisation updated to 2.1.8 (UI, Readme)
  - Italian localisation updated to 2.1.8 (UI, Readme, Instant Start)
  - Dutch localisation updated to 2.1.8 (UI, Readme, Instant Start, documentation)

  Bug fixes:

  - Still some corrections about the highlight of the search results

  - Rc filter: Correction on the handling of comments and includes

  - HTML entities containing numbers are not recognized
  http://sourceforge.net/support/tracker.php?aid=3060805

  - Very slow editor with Java 1.6 on a Mac
  http://sourceforge.net/support/tracker.php?aid=3070076

----------------------------------------------------------------------
 OmegaT 2.1.8 update 1
----------------------------------------------------------------------
  1 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.8 update 1 vs. 2.1.8

  Other enhancements:

  - SVG image filter

  Bug fixes:

  - Some advanced search parameters were not working properly

----------------------------------------------------------------------
 OmegaT 2.1.8 
----------------------------------------------------------------------
  3 Enhancements
  0 Bugfix